code cleanups